[gd_scene load_steps=10 format=3 uid="uid://dd0kl255gfdkd"]

[ext_resource type="Script" path="res://game/map/interactables/block.gd" id="1_hiptf"]
[ext_resource type="Texture2D" uid="uid://c6etq1nttedf5" path="res://art/Background Assets/pushable_block.png" id="2_8nerb"]
[ext_resource type="Script" path="res://game/common/interactable.gd" id="3_8p86d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7we8"]
size = Vector2(64, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6b35"]
size = Vector2(64, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yk5e8"]
size = Vector2(64, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e17dm"]
size = Vector2(2, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0504"]
size = Vector2(2, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nt7tr"]
size = Vector2(64, 40)

[node name="Block" type="RigidBody2D"]
collision_layer = 17
collision_mask = 3
lock_rotation = true
linear_damp = 5.0
script = ExtResource("1_hiptf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_8nerb")
region_rect = Rect2(273, 196, 63, 52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x7we8")

[node name="ContactRegions" type="Node2D" parent="."]
position = Vector2(0, -12)

[node name="ContactUp" type="Area2D" parent="ContactRegions"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactRegions/ContactUp"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_n6b35")
debug_color = Color(0.577807, 0.552922, 7.70092e-07, 0.42)

[node name="ContactDown" type="Area2D" parent="ContactRegions"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactRegions/ContactDown"]
position = Vector2(0, 33)
shape = SubResource("RectangleShape2D_yk5e8")
debug_color = Color(0.577807, 0.552922, 7.70092e-07, 0.42)

[node name="ContactLeft" type="Area2D" parent="ContactRegions"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactRegions/ContactLeft"]
position = Vector2(-33, 12)
shape = SubResource("RectangleShape2D_e17dm")
debug_color = Color(0.577807, 0.552922, 7.70092e-07, 0.42)

[node name="ContactRight" type="Area2D" parent="ContactRegions"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactRegions/ContactRight"]
position = Vector2(33, 12)
shape = SubResource("RectangleShape2D_a0504")
debug_color = Color(0.577807, 0.552922, 7.70092e-07, 0.42)

[node name="Interactable" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_layer = 8
collision_mask = 0
script = ExtResource("3_8p86d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_nt7tr")
debug_color = Color(0.27634, 0.631894, 0, 0.42)
